[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "versioningit"]

[project]
name = "pylab"
description = "Carry out controlled experiments using Python"
license = { text = "MIT" }
authors = [{ name = "Pravin", email = "5994387+Cityhunteur@users.noreply.github.com" }]
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    "versioningit",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "coverage", "pytest-cov"]

[project.readme]
content-type = "text/markdown"
file = "README.md"

[tool.setuptools.packages.find]
include = ["pylab.*", "pylab"]

[tool.mypy]
python_version = "3.10"

[tool.poetry]
readme = "README.md"

[tool.versioningit]

[tool.versioningit.onbuild]
build-file = "pylab/_version.py"
source-file = "pylab/_version.py"
